# win

./: .gitignore  README.md  pyproject.toml
configs/: pilot_A.yaml  pilot_A_remote_bnb_smoke.yaml
docs/: 00_problem_lock.md  01_method_spec.md  02_pilot_A_protocol.md  03_pilot_B_protocol.md  04_full_experiment_plan.md  05_baselines_reimpl.md  06_decision_log.md
scripts/: README.md  diagnose_mpac.py  pilot_A_baseline_drop.py
src/wmark/: __init__.py  compress.py  data.py  metrics.py  mpac.py  quantize.py  utils.py
tests/: test_compress.py  test_mpac.py
